@@ -1839,6 +1839,10 @@ nuttx-5.8 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  interrupts.
 	* arch/arm/src/lpc17xx/lp17_clockconfig.c - Power was not being
 	  provided to GPIO module.  This is a critical bugfix!
+	* arch/arm/src/lpc17xx/lpc17_serial.c - Improved logic to handle
+	  missed TX interrupts.
+	* arch/arm/src/lpc17xx/lpc17_ssp.c - Fix a hard fault during SSP
+	  initialization.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
